--- a/application.css
+++ b/application.css
@@ -1,7 +1,3 @@
-.test{
-  content: "adios";
-}
-
 *, *:before, *:after {
   margin: 0;
   padding: 0;
@@ -319,5 +315,9 @@ p a {
   }
   .button {
     display: block;
+  }
+  .lang a {
+    font-size: 20px;
+    padding: 0 5px;
   }
 }
